--- a/template.html
+++ b/template.html
@@ -1,17 +1,34 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Johnny Marciano</title>
-    <link rel="stylesheet" href="styles.css">
-  </head>
-  <body>
-      <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About Me</a>
-        <a href="find.html">Find me</a>
-        <a href="ws.html">Work/School</a>
-        <a href="pip.html">Projects</a>
-      </nav>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>RamshackleJohnny</title>
+  <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Anton|Josefin+Sans|Shadows+Into+Light" rel="stylesheet">
+</head>
+
+<body>
+<div class="wrap">
+  <nav>
+    <h1>RamshackleJohnny</h1>
+    <a href="index.html">Home</a>
+    <a href="about.html">About Me</a>
+    <a href="find.html">Find me</a>
+    <a href="ws.html">Work/School</a>
+    <a href="projects.html">Projects</a>
+  </nav>
+  <footer>
+    <br>
+    <div>
+      <a href="index.html">Home</a>
+      <a href="about.html">About Me</a>
+      <a href="find.html">Find me</a>
+      <a href="ws.html">Work/School</a>
+      <a href="projects.html">Projects</a>
+    </div>
+  </footer>
+</div>
+</body>
+
 </html>
