Progress made on index page

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <a href="ws.html">Work/School</a>
     <a href="projects.html">Projects</a>
   </nav>
+  <main>
+    <h1>Welcome to my site! I've done very little with my life, and i've got the portfolio to prove it!</h1>
+  </main>
   <footer>
     <div>
       <a href="index.html">Home</a>
