Lots of progress made on find, still incomplete

--- a/find.html
+++ b/find.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <div class="wrap">
+  <div class="findwrap">
     <nav>
       <h1>RamshackleJohnny</h1>
       <a href="index.html">Home</a>
@@ -18,12 +18,16 @@
       <a href="ws.html">Work/School</a>
       <a href="projects.html">Projects</a>
     </nav>
+  <div class="thestorm">
     <main class="quote">
       <h1>“What makes the desert beautiful,' said the little prince, 'is that somewhere it hides a well...” ― Antoine de Saint-Exupéry, The Little Prince</h1>
-          <img class="well" alt="The well" src="images/well.svg" width="400px" height="400px">
+      <img class="well" alt="The well" src="images/well.svg" width="400px" height="400px">
       <a class="github" href="https://github.com/RamshackleJohnny">Github</a>
       <p class="email">Email: bitingprofessionalism@gmail.com</p>
+    <div class="storm" >
+    </div>
     </main>
+    </div>
     <footer class="findfoot">
       <div class="hills">
         <div>
