Find page broken again, progress made on about

--- a/find.html
+++ b/find.html
@@ -39,6 +39,11 @@
           <a href="projects.html">Projects</a>
         </div>
         <a href="https://thenounproject.com/search/?q=well&i=1077430">Well by Andrew Doane from the Noun Project</a>
+        <div class="no">
+        <p>Not feeling Adventurous?</p>
+        <a href="#">Github</a>
+        <p>Email:bitingprofessionalism@gmail.com</p>
+      </div>
       </div>
     </footer>
   </div>
