--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title>RamshackleJohnny</title>
   <link rel="stylesheet" href="styles.css">
+  <script type="text/javascript" src="sand.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Anton|Josefin+Sans|Shadows+Into+Light" rel="stylesheet">
 </head>
 
