--- a/find.html
+++ b/find.html
@@ -31,19 +31,20 @@
     </div>
     <footer class="findfoot">
       <div class="hills">
-        <div>
+        <div class="hillfoot">
           <a href="index.html">Home</a>
           <a href="about.html">About Me</a>
           <a href="find.html">Find me</a>
           <a href="ws.html">Work/School</a>
           <a href="projects.html">Projects</a>
+          <a href="https://thenounproject.com/search/?q=well&i=1077430">Well by Andrew Doane from the Noun Project</a>
+          <div class="no">
+            <p>Not feeling Adventurous?</p>
+            <a href="#">Github</a>
+            <p>Email: bitingprofessionalism@gmail.com</p>
+            <a href="#">Contact Me</a>
+          </div>
         </div>
-        <a href="https://thenounproject.com/search/?q=well&i=1077430">Well by Andrew Doane from the Noun Project</a>
-        <div class="no">
-        <p>Not feeling Adventurous?</p>
-        <a href="#">Github</a>
-        <p>Email:bitingprofessionalism@gmail.com</p>
-      </div>
       </div>
     </footer>
   </div>
