Text added to index page

--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
       <a href="ws.html">Work/School</a>
       <a href="projects.html">Projects</a>
     </nav>
-    <main>
+    <main class="maindex">
       <h1>Welcome to my site! I've done very little with my life, and i've got the portfolio to prove it!</h1>
+      <p>My name is Jonathan Modesto Marciano. I'm a suburban teenager from the Philadelphia area with no notable traits. When i was younger I was asked "What do you want to be when you grow up?" Now i'm grown up and still have no idea. I spent highschool exploring different sections of computers before deciding I wanted to be a software engineer. If you're wondering why I made such a decision, don't bother asking because I don't know either.</p>
+      <p>My hobbies include exploring, music and coding.</p>
+      
     </main>
     <footer>
       <div>
