--- a/ws.html
+++ b/ws.html
@@ -19,7 +19,9 @@
     <a href="projects.html">Projects</a>
   </nav>
   <main>
-    
+    <h1>School &amp; Work</h1>
+    <h2>School</h2>
+    <h3>Work</h3>
   </main>
   <footer>
     <div>
