Styles updated, bandcamp link added

--- a/find.html
+++ b/find.html
@@ -25,6 +25,7 @@
         <img class="well" alt="The well" src="images/well.svg" width="400px" height="400px">
         <a class="github" href="https://github.com/RamshackleJohnny">Github</a>
         <p class="email">Email: bitingprofessionalism@gmail.com</p>
+        <a class="bandcamp" href="https://bandcamp.com/JonathanM">bandcamp</a>
         <div class="storm">
         </div>
       </main>
