Updated links on find page

--- a/find.html
+++ b/find.html
@@ -22,7 +22,7 @@
     <div class="thestorm">
       <main class="quote">
         <h1>“What makes the desert beautiful,' said the little prince, 'is that somewhere it hides a well...” ― Antoine de Saint-Exupéry, The Little Prince</h1>
-        <a href="#"><img class="well" alt="The well" src="images/well.svg" width="400px" height="400px"></a>
+        <a href="contact.html"><img class="well" alt="The well" src="images/well.svg" width="400px" height="400px"></a>
         <a class="github" href="https://github.com/RamshackleJohnny">Github</a>
         <p class="email">Email: bitingprofessionalism@gmail.com</p>
         <a class="bandcamp" href="https://bandcamp.com/JonathanM">bandcamp</a>
