Sandstorm page completed, improve upon improvment of skills

--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <div class="wrap">
+  <div class="wrapcontact">
     <header>
       <nav>
         <h1>RamshackleJohnny</h1>
@@ -20,9 +20,15 @@
         <a href="projects.html">Projects</a>
       </nav>
     </header>
+  <div class="foorm">
+    <h1 class="contact">Contact me!</h1>
     <form>
-      <label><input></label>
+      <label for="" class="formstyles">First name<input type="text" name=""></label>
+      <label for="" class="formstyles">Last name<input type="text" name=""></label>
+      <label for="" class="formstyles">Complaints / Compliments <input type="text" name=""></label>
+      <input type="submit" name="submit" id="submit">
     </form>
+  </div>
     <footer>
       <div>
         <a href="index.html">Home</a>
