--- a/contact.html
+++ b/contact.html
@@ -23,9 +23,9 @@
   <div class="foorm">
     <h1 class="contact">Contact me!</h1>
     <form>
-      <label for="" class="formstyles">First name<input type="text" name=""></label>
-      <label for="" class="formstyles">Last name<input type="text" name=""></label>
-      <label for="" class="formstyles">Complaints / Compliments <input type="text" name=""></label>
+      <label for="" class="formstyles">First name<input type="text" name="first"></label>
+      <label for="" class="formstyles">Last name<input type="text" name="last"></label>
+      <label for="" class="formstyles">Complaints / Compliments <input type="text" name="comp"></label>
       <input type="submit" name="submit" id="submit">
     </form>
   </div>
