--- a/projects.html
+++ b/projects.html
@@ -19,15 +19,12 @@
     <a href="ws.html">Work/School</a>
     <a href="projects.html">Projects</a>
   </nav>
-  <main>
-    <h1>School &amp; Work</h1>
-    <h2>School</h2>
-    <p> Attended Bucks County Technical High School for Multimedia Digital Design (3 years)</p>
-    <p>Thaddeus Stevens College of Technology: CSET (In progress)</p>
-    <h3>Work</h3>
-    <p>Golf Adventure: 3 years Management<p/>
-    <p>Custom Happy: Learned about product sales and production (Current)</p>
-  </main>
+  <div class="proj">
+    <h1> Projects I've worked on: </h1>
+    <h2>Android apps</h2>
+    <p>In 11th and 12th grade myself and a classmate created 2 Android apps to enter in the regional PA computer fair, one of which took 2nd place and one of which took first, although we decided no to go any further in the competion with that one.</p>
+    <p>Sadly there is no longer any files of these apps that I have access to. This section will be replaced when I have a better project and proof of project to replace it with.</p>
+  </div>
   <footer>
     <div>
       <a href="index.html">Home</a>
