--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>RamshackleJohnny</title>
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Anton|Josefin+Sans|Shadows+Into+Light" rel="stylesheet">
+  <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
 </head>
 
 <body>
@@ -20,9 +21,8 @@
     </nav>
     <main class="maindex">
       <h1>Welcome to my site! I've done very little with my life, and i've got the portfolio to prove it!</h1>
-      <p>My name is Jonathan Modesto Marciano. I'm a suburban teenager from the Philadelphia area with no notable traits. When i was younger I was asked "What do you want to be when you grow up?" Now i'm grown up and still have no idea. I spent highschool exploring different sections of computers before deciding I wanted to be a software engineer. If you're wondering why I made such a decision, don't bother asking because I don't know either.</p>
-      <p>My hobbies include exploring, music and coding.</p>
-      <p>You can find examples of 2 of these things on this site</p>
+      <p>My name is Jonathan Modesto Marciano. I'm a suburban teenager from the Philadelphia area with no notable traits. I'd let my work speak for itself, were there enough work to say anything. This site will (hopefully) be filled overtime with any and all work I do.</p>
+      <p>This site includes mediocore coding, a lack of understanding of color theory, and a small amount of my insperation that I could actually make into reality.</p>
     </main>
     <footer>
       <div>
