--- a/projects.html
+++ b/projects.html
@@ -6,35 +6,36 @@
   <title>RamshackleJohnny</title>
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Anton|Josefin+Sans|Shadows+Into+Light" rel="stylesheet">
-    <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
+  <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
 </head>
 
 <body>
-<div class="wrap">
-  <nav>
-    <h1>RamshackleJohnny</h1>
-    <a href="index.html">Home</a>
-    <a href="about.html">About Me</a>
-    <a href="find.html">Find me</a>
-    <a href="ws.html">Work/School</a>
-    <a href="projects.html">Projects</a>
-  </nav>
-  <div class="proj">
-    <h1> Projects I've worked on: </h1>
-    <h2>Android apps</h2>
-    <p>In 11th and 12th grade myself and a classmate created 2 Android apps to enter in the regional PA computer fair, one of which took 2nd place and one of which took first, although we decided no to go any further in the competion with that one.</p>
-    <p>Sadly there is no longer any files of these apps that I have access to. This section will be replaced when I have a better project and proof of project to replace it with.</p>
-  </div>
-  <footer>
-    <div>
+  <div class="wrap">
+    <nav>
+      <h1>RamshackleJohnny</h1>
       <a href="index.html">Home</a>
       <a href="about.html">About Me</a>
       <a href="find.html">Find me</a>
       <a href="ws.html">Work/School</a>
       <a href="projects.html">Projects</a>
+    </nav>
+    <div class="proj">
+      <h1> Projects I've worked on: </h1>
+      <h2>Android apps</h2>
+      <p>In 11th and 12th grade myself and a classmate created 2 Android apps to enter in the regional PA computer fair, one of which took 2nd place and one of which took first, although we decided no to go any further in the competion with that
+        one.</p>
+      <p>Sadly there is no longer any files of these apps that I have access to. This section will be replaced when I have a better project and proof of project to replace it with.</p>
     </div>
-  </footer>
-</div>
+    <footer>
+      <div>
+        <a href="index.html">Home</a>
+        <a href="about.html">About Me</a>
+        <a href="find.html">Find me</a>
+        <a href="ws.html">Work/School</a>
+        <a href="projects.html">Projects</a>
+      </div>
+    </footer>
+  </div>
 </body>
 
 </html>
