--- a/ws.html
+++ b/ws.html
@@ -6,38 +6,39 @@
   <title>RamshackleJohnny</title>
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Anton|Josefin+Sans|Shadows+Into+Light" rel="stylesheet">
-    <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
+  <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
 </head>
 
 <body>
-<div class="wrap">
-  <nav>
-    <h1>RamshackleJohnny</h1>
-    <a href="index.html">Home</a>
-    <a href="about.html">About Me</a>
-    <a href="find.html">Find me</a>
-    <a href="ws.html">Work/School</a>
-    <a href="projects.html">Projects</a>
-  </nav>
-  <main>
-    <h1>School &amp; Work</h1>
-    <h2>School</h2>
-    <p> Attended Bucks County Technical High School for Multimedia Digital Design (3 years)</p>
-    <p>Thaddeus Stevens College of Technology: CSET (In progress)</p>
-    <h3>Work</h3>
-    <p>Golf Adventure: 3 years Management<p/>
-    <p>Custom Happy: Learned about product sales and production (Current)</p>
-  </main>
-  <footer>
-    <div>
+  <div class="wrap">
+    <nav>
+      <h1>RamshackleJohnny</h1>
       <a href="index.html">Home</a>
       <a href="about.html">About Me</a>
       <a href="find.html">Find me</a>
       <a href="ws.html">Work/School</a>
       <a href="projects.html">Projects</a>
-    </div>
-  </footer>
-</div>
+    </nav>
+    <main>
+      <h1>School &amp; Work</h1>
+      <h2>School</h2>
+      <p> Attended Bucks County Technical High School for Multimedia Digital Design (3 years)</p>
+      <p>Thaddeus Stevens College of Technology: CSET (In progress)</p>
+      <h3>Work</h3>
+      <p>Golf Adventure: 3 years Management
+        <p />
+        <p>Custom Happy: Learned about product sales and production (Current)</p>
+    </main>
+    <footer>
+      <div>
+        <a href="index.html">Home</a>
+        <a href="about.html">About Me</a>
+        <a href="find.html">Find me</a>
+        <a href="ws.html">Work/School</a>
+        <a href="projects.html">Projects</a>
+      </div>
+    </footer>
+  </div>
 </body>
 
 </html>
