Added github link to project page

--- a/projects.html
+++ b/projects.html
@@ -25,6 +25,7 @@
       <p>In 11th and 12th grade myself and a classmate created 2 Android apps to enter in the regional PA computer fair, one of which took 2nd place and one of which took first, although we decided no to go any further in the competion with that
         one.</p>
       <p>Sadly there is no longer any files of these apps that I have access to. This section will be replaced when I have a better project and proof of project to replace it with.</p>
+      <p>Anything I start working on is listed in my <a href="https://github.com/RamshackleJohnny">Github</a></p>
     </div>
     <footer>
       <div>
