--- a/about.html
+++ b/about.html
@@ -75,6 +75,7 @@
             <p class="timeline-content-date">2014</p>
             <p>Began Freshman year of Tech School</p>
             <p>Failed to get into Multimedia program, try again next year</p>
+            <p>Got my first job at Golf Adventure mini-golf</p>
           </div>
         </div>
 
