Added Source to image

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <a href="find.html">Find me</a>
         <a href="ws.html">Work/School</a>
         <a href="projects.html">Projects</a>
+        <a href="samanthabrooks.myportfolio.com">Drawing of me by Samantha Brooks</a>
       </div>
     </footer>
   </div>
